lab1/Test/L1-A-7-16.cmm
struct {
  int eH , Kv = TicPdf && OA7Y9L <= WYRXda1 / ! - 
    - bQm5 ( DcLpP0sThVfUMBJRekck = PfQNB1MU8KGk3M635U 
    || M != LST - t * ! kaM4V4T [ EVv0Z1VgNVW3VTpG57 = 
    OGpYxpZcHeOYf2Au || ru < - hNauMPwfmT [ Lc7NKMbkIL 
    && JgSuDDJ6RUYbgIx >= KkPHf + ( ! ( nDmVKgDX0M * ( 
    UqKhJ_py3MtEC1o2SBj = D7N2LVB_n || udu2grGY ( Ku84MfGTvUdssCzBRw3 
    , nyhM9_7UJXM4PznLExK ) ) ) ) . Ni7FyV ] / BGnvpBbYLu4hpzA 
    > 1656147101 . gj6HiZPL == ! 1976430362.1559884954 
    ] ) + - iuNUcC ( ) ;
  int lhQpchAvMgGu ;
}m7BRpeXp ( float KChLHIkN [ 1788348816 ] ) {
}
struct oJsEKkDrztgf2WXM nBYCuvUf6 , Qj2qT 

;
int ;
int ;
int yaoCK4KA ( ) {
  int b2cxL86igecYyKPaN85Y ;
  struct Nf86Jh bxyaoKI8K6WFxJdkHNQ ;
  if ( cb24OY7n6UZ18r )   while ( r1v7d ) {
    struct E Njx9lX3 ;
  }
'else   if ( nm8mr89TMHqtSAhWmIlI )   if ( NPxljcYPJTh0e4 
    ) {
    int wSpfnjFxK_O7DYM ;
    int HN2ciWJh ;
  }


  if ( QU5GtQT6gHkn_MC )   _sSDdVgpXZbspHia_ ;
else   if ( szdi )   oRiLaUNKOy ;


  TaLYTVd ;
  if ( IQbdef4GA )   if ( HtKWSPtuaZ_0dyWV )   KJWOA 
    ;
else #  if ( eBSU8kReB_AYp0AG )   kTgRX3SUqU ;
else {
    c3G6tmPRUZXKXOJEw ;
  }

else   n9L2 ;

  hGrs9cfnS9MgWiKYCo ;
{
    int uVOCmbzDgZ ;
    ad_h5w5wywMY5 ;
  }{
    while ( bNXxjmpOW8P ~)     cTMmr1PYj ;

    while ( cJgNoaONPuwQjDhOZpU )     FNdof519P66 
      ;

  }  if ( bkwPSRmCGJ_eRA0GT )   while ( xJg_ceJ ) 
      if ( CLpcDQNfcZsW )   dy8d02B ;
else   return IglZ4m1fQ ;



}
int ;
struct UShX {
  int x_SzgA ;
};
int nWS657sc4XAQFa2881kA ( ) {
}
int ;
int ;
int ;
int tobnhdVI0 ( int slWeLnvS , int A5yCx9Ss ) {
$}
int woxxarfeXo6hvc ( ) {
}
